2005-09-16  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* README: + rewriten a bit (again)

2005-09-04  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* README: + a bit rewriten

2005-09-03  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: + now uses `exec` when becoming super user

	* null.c, null.sh: + 'Exec feature' added (command as arguments)

2005-08-30  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* malloc.c: alloc() function added

2005-08-30  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mpd-show.c: New file
	* Makefile, README: mpd-show added

2005-08-29  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: --patch fixed
	* TODO: installkernel entry modified

2005-08-27  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel, installkernel.8: changed the default value of
	--install-image, --update-symlinks and --update-loader

2005-08-26  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile: release target and .release file support added

	* cpuload.sh: --nice argument added

	* add: bug fixed

	* installkernel: A lot more standard compilant
	* installkernel.8: lilo.conf description added plus some minor
	* README: Note on installkernel being more standard compatible

	* genpass.sh: New file
	* README, Makefile: genpass.sh added
	* one-time-pass.sh: Now uses genpass.sh

	* Makefile: RELEASE added

	* quotes.txt: Several "the last words of"

	* check.sh: License changed to GNU GPL

	* one-time-pass.sh: New file
	* README: one-time-pass.sh added

2005-08-19  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel, installkernel.8: --log and prefix options added

2005-08-18  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel, installkernel.8: --config option added

	* malloc.c: Signal handler added

2005-08-13  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* Makefile: targets for install, uninstall added
	target for creating package added
	inteligent X11 include and lib directories finding
	* slack-desc: New file

	* mountiso: New file