@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/09/16 16:30:37 $
+                     $Date: 2005/09/22 16:41:28 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which  may be usefull  in everyday life.   There are
@@ -43,6 +43,9 @@ At the moment the collection includes:
  * cutcom - removes C++ comments  from stdin and outputs the result to
    stdout;
 
+ * extractlinks.pl  - extracts links  from a  HTML page.   Useful, for
+   example, when downloading an Internet gallery.
+
  * FvwmTransFocus  - an  FVWM  module which  changes windows'  opacity
    depending  on  focus.  Whn  window  looses  focus  it becomes  more
    transparent which looks "neet";
@@ -52,6 +55,9 @@ At the moment the collection includes:
  * get_mks_vir_bases -  downlaods MKS-Vir virus  database.  Simplified
    version  of mksupdate  shell script  (from mks_vir  antivirus).  It
    does only download up-to-date virus bases and nothing more;
+
+ * getlyrics.pl - downloads  lyrics of a given song  from the Internet
+   (http://www.lyrc.com.ar/ accauly).
 
  * infinite-logger - loggs every logged message including the messages
    logget by itself :]
@@ -102,6 +108,8 @@ At the moment the collection includes:
    difference that it automaticly generates a random password which is
    not  revelad  to  the  user,  therefore he  doesn't  know  his  own
    password;
+
+ * pingrange.pl - pings a range of adresses.
 
  * quotes.txt - a collection of quotations (some are in Polish);
 
